--- a/bcmweb/src/app/pages/rcsa/master/master-inherent-risk/master-inherent-risk.component.html
+++ b/bcmweb/src/app/pages/rcsa/master/master-inherent-risk/master-inherent-risk.component.html
@@ -157,7 +157,7 @@
                                         white-space: normal;"
                                             [hidden]="!GridFormsProcessRisk.get('GridRows')?.value[i].isEditable">{{GridFormsProcessRisk.get('GridRows')?.value[i].Name}}</span>
                                         <mat-form-field
-                                            [appearance]="GridFormsProcessRisk.get('GridRows')?.value[i].isEditable? 'none' : 'legacy'">
+                                            [appearance]="$any(GridFormsProcessRisk.get('GridRows')?.value[i].isEditable? 'none' : 'legacy')">
                                             <input matInput type="text" formControlName="Name"
                                                 [hidden]="GridFormsProcessRisk.get('GridRows')?.value[i].isEditable"
                                                 [readonly]="GridFormsProcessRisk.get('GridRows')?.value[i].isEditable">
@@ -284,7 +284,7 @@
                                     <mat-cell *matCellDef="let row;let i = index" [formGroup]="row" style="flex: 1 1 100%; box-sizing: border-box; max-width: 34%; padding-right: 8px;" class="tablecolumnspan">
                                         <span style="word-wrap: break-word; overflow-wrap: break-word; white-space: normal;" [hidden]="!GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable">{{GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].Rating}}</span>
                                         <mat-form-field
-                                            [appearance]="GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable? 'none' : 'legacy'">
+                                            [appearance]="$any(GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable? 'none' : 'legacy')">
                                             <input matInput type="text" formControlName="Rating"
                                                 [hidden]="GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable"
                                                 [readonly]="GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable">
@@ -296,7 +296,7 @@
                                     <mat-header-cell *matHeaderCellDef mat-sort-header>Score</mat-header-cell>
                                     <mat-cell *matCellDef="let row;let i = index" [formGroup]="row">
                                         <mat-form-field
-                                            [appearance]="GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable? 'none' : 'legacy'">
+                                            [appearance]="$any(GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable? 'none' : 'legacy')">
                                             <input matInput type="number" min="0" (keypress)="keyPressNumber($event)"
                                                 formControlName="Score"
                                                 [readonly]="GridFormsInherentLikelihoodRating.get('GridRows')?.value[i].isEditable">
@@ -430,7 +430,7 @@
                                         white-space: normal;"
                                             [hidden]="!GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable">{{GridFormsInherentImpactRate.get('GridRows')?.value[i].Rating}}</span>
                                         <mat-form-field
-                                            [appearance]="GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable? 'none' : 'legacy'">
+                                            [appearance]="$any(GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable? 'none' : 'legacy')">
                                             <input matInput type="text" formControlName="Rating"
                                                 [hidden]="GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable"
                                                 [readonly]="GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable">
@@ -441,7 +441,7 @@
                                     <mat-header-cell *matHeaderCellDef mat-sort-header>Score</mat-header-cell>
                                     <mat-cell *matCellDef="let row;let i = index" [formGroup]="row">
                                         <mat-form-field
-                                            [appearance]="GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable? 'none' : 'legacy'">
+                                            [appearance]="$any(GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable? 'none' : 'legacy')">
                                             <input matInput type="number" min="0" (keypress)="keyPressNumber($event)"
                                                 formControlName="Score"
                                                 [readonly]="GridFormsInherentImpactRate.get('GridRows')?.value[i].isEditable">
